--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiohttp-retry==2.8.3
 aiosignal==1.3.2
+alembic==1.14.1
 attrs==24.3.0
 blinker==1.9.0
 cachelib==0.13.0
@@ -9,14 +10,18 @@ certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 Flask==3.1.0
+Flask-Migrate==4.1.0
 Flask-MySQL==1.6.0
 flask-mysql-connector==1.1.0
 Flask-MySQLdb==2.0.0
 Flask-Session==0.8.0
+Flask-SQLAlchemy==3.1.1
 frozenlist==1.5.0
+greenlet==3.1.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
+Mako==1.3.8
 MarkupSafe==3.0.2
 msgspec==0.19.0
 multidict==6.1.0
@@ -31,9 +36,10 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 requests==2.32.3
 six==1.17.0
+SQLAlchemy==2.0.37
 twilio==9.4.3
+typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 Werkzeug==3.1.3
 yarl==1.18.3
-gunicorn
