Added psycopg2-binary to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ mysqlclient==2.2.7
 numpy==2.2.2
 pandas==2.2.3
 propcache==0.2.1
+psycopg2-binary==2.9.10
 PyJWT==2.10.1
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
